--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "parcel serve src/index.html",
     "test": "node tests/*.js",
-      "build": "parcel build src/index.html"
+  "build": "npm run test && parcel build src/index.html"
   },
   "browserslist": [
     "last 1 Chrome versions"
